<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.prototype.profilsekolah.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.prototype.profilsekolah.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_fasilitas"
        android:name="com.prototype.profilsekolah.ui.fasilitas.FasilitasFragment"
        android:label="@string/menu_fasilitas"
        tools:layout="@layout/fragment_fasilitas" />
    <fragment
        android:id="@+id/nav_staff"
        android:name="com.prototype.profilsekolah.ui.staff.StaffFragment"
        android:label="@string/menu_staff"
        tools:layout="@layout/fragment_staff"/>
    <fragment
        android:id="@+id/nav_extra"
        android:name="com.prototype.profilsekolah.ui.eskul.EskulFragment"
        android:label="@string/menu_eskul"
        tools:layout="@layout/fragment_eskul"/>
</navigation>